[tool.poetry]
name = "pulumi-tap-launchdarkly"
version = "0.0.2"
description = "`tap-launchdarkly` is a Singer tap for LaunchDarkly, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Pablo Seibelt"]
keywords = [
    "ELT",
    "LaunchDarkly",
]
license = "Apache 2.0"
packages = [
    { include = "tap_launchdarkly" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.26.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.26.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_launchdarkly"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_launchdarkly"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-launchdarkly = 'tap_launchdarkly.tap:TapLaunchDarkly.cli'
